data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1262.wast
;; 3. **Indirect Function Call Within Loop**:    - **Description**: A WebAssembly module (A) makes an indirect call to an imported function from module B within a loop. The indirect call index is derived from the operand stack. Ensure that the loop and the operand stack are correctly managed during and after the indirect call.    - **Constraint**: Validate that the indirect call respects type constraints and does not corrupt the stack or loop control flow.

(assert_invalid
  (module
    (import "B" "func" (func $imported (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $imported)
    (func (result i32)
      (i32.const 0)
      (loop (result i32)
        (i32.const 0)
        (call_indirect (type (func (param i32) (result i32))))
        (br 0)
      )
    )
  )
  "type mismatch"
)